# RainyASR

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.en.md  README.md  plan.md  pyproject.toml  rust-plan.md
.github/workflows/: test.yml
config/: config.toml
scripts/: demo_subtitle.py  test_asr.py  test_capture.py  test_translate.py  test_worker.py  verify_subtitle_window.py
src/rainyasr/: __main__.py  app.py  config.py  hotkey.py  main.py  worker.py
src/rainyasr/audio/: __init__.py  capture.py  ring_buffer.py  wav.py
src/rainyasr/gui/: __init__.py  settings_dialog.py  subtitle_window.py
src/rainyasr/providers/: __init__.py  asr.py  base.py  translate.py
tests/: test_app.py  test_asr_provider.py  test_capture.py  test_config.py  test_demo_subtitle.py  test_hotkey.py  test_main.py  test_ring_buffer.py  test_settings_dialog.py  test_subtitle_window.py  test_translate_provider.py  test_wav.py  test_worker.py
