[project]
name = "rainyasr"
version = "0.1.0"
description = "Cross-platform real-time subtitle translation tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.22.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.11.0",
    "pynput>=1.8.0",
    "pyside6>=6.11.1",
    "qasync>=0.27.0",
    "ruff>=0.15.13",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "logfire>=3.14.0",
    "dotenv>=0.9.9",
    "tomli-w>=1.2.0",
    "pyaudio>=0.2.14; sys_platform == 'win32'",
    "pyaudiowpatch>=0.2.12; sys_platform == 'win32'",
    "soundcard>=0.4.6",
    "openai>=2.37.0",
]

[project.scripts]
rainyasr = "rainyasr.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rainyasr"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long, handled by formatter

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
